--- a/views/blog/foot.html
+++ b/views/blog/foot.html
@@ -1,6 +1,6 @@
 <footer class="blog-footer">
-    <p><span>Copyright</span><span>&copy;</span><span>2017</span><a href="{{.config.url}}">{{.config.title}}</a><span>Design By LY</span></p>
-    <p><a href="http://www.miibeian.gov.cn/" target="_blank">沪ICP备xxxx号-1</a></p>
+    <p><span>Copyright</span><span>&copy;</span><span>2019</span><a href="{{.config.url}}">{{.config.title}}</a><span>Design By LY</span></p>
+    <p><a href="http://www.flybirdx.com" target="_blank">京备xxxx号-1</a></p>
 </footer>
 
 <!--侧边导航-->
