--- a/views/blog/home.html
+++ b/views/blog/home.html
@@ -97,7 +97,7 @@
                         <div class="blog-module-title">友情链接</div>
                         <ul class="blogroll">
                             <li><a target="_blank" href="http://www.layui.com/" title="Layui">Layui</a></li>
-                            <li><a target="_blank" href="https://github.com/Echosong/ES/" title="页签">github</a></li>
+                            <li><a target="_blank" href="https://github.com/flybirdC/" title="页签">github</a></li>
                         </ul>
                     </div>
                 </div>
